feat: add new paper `BG3`

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         {id: 'AeonG', label: 'AeonG'},
         {id: 'AsynGraph', label: 'AsynGraph'},
         {id: 'Auxo', label: 'Auxo'},
+        {id: 'BG3', label: 'BG3'},
         {id: 'Blaze', label: 'Blaze'},
         {id: 'BlitzG', label: 'BlitzG'},
         {id: 'Blogel', label: 'Blogel'},
@@ -269,6 +270,7 @@
         {from: 'AsynGraph', to: 'Maiter'},
         {from: 'AsynGraph', to: 'Tigr'},
         {from: 'Auxo', to: 'Chronos'},
+        {from: 'BG3', to: 'ByteGraph'},
         {from: 'Blaze', to: 'Lumos'},
         {from: 'BlitzG', to: 'DD-Graph'},
         {from: 'BlitzG', to: 'GRAM'},
