fix: adjust edges of `Kineograph`

--- a/index.html
+++ b/index.html
@@ -436,7 +436,6 @@
         {from: 'GraphCage', to: 'GraphMat'},
         {from: 'GraphCage', to: 'GraphPhi'},
         {from: 'GraphChi', to: 'GPS'},
-        {from: 'GraphChi', to: 'Kineograph'},
         {
             from: 'GraphChi',
             to: 'PowerGraph',
@@ -590,6 +589,7 @@
         {from: 'KickStarter', to: 'STINGER'},
         {from: 'KickStarter', to: 'Tornado'},
         {from: 'Kineograph', to: 'Haloop'},
+        {from: 'Kineograph', to: 'Neo4j'},
         {from: 'Kineograph', to: 'Pregel'},
         {from: 'L-PowerGraph', to: 'GraphD'},
         {from: 'L-PowerGraph', to: 'GrapH'},
@@ -642,7 +642,6 @@
         {from: 'NScale', to: 'Trinity'},
         {from: 'Naiad', to: 'Differential dataflow'},
         {from: 'Naiad', to: 'GraphX'},
-        {from: 'Naiad', to: 'Kineograph'},
         {from: 'Neo4j', to: 'Graph Database'},
         {from: 'NXgraph', to: 'GBASE'},
         {from: 'NXgraph', to: 'GridGraph'},
@@ -661,6 +660,7 @@
         {from: 'Pimiento', to: 'NXgraph'},
         {from: 'Pimiento', to: 'VENUS'},
         {from: 'PowerGraph', to: 'Distributed GraphLab'},
+        {from: 'PowerGraph', to: 'Kineograph'},
         {from: 'PowerLyra', to: 'Blogel'},
         {
             from: 'PowerLyra',
