refactor: use fuzzy.js to search

--- a/index.html
+++ b/index.html
@@ -36,6 +36,30 @@
         font-size: 14px;
       }
 
+      #search-list {
+        position: absolute;
+        top: 72px;
+        left: 12px;
+        z-index: 999;
+        width: 320px;
+        background-color: #fff;
+        display: none;
+        font-size: 14px;
+        text-align: center;
+      }
+
+      #search-list-title {
+        text-align: center;
+        font-size: 12px;
+        font-weight: 300;
+        margin-bottom: 10px;
+      }
+
+      #search-list-content {
+        max-height: 480px;
+        overflow-y: scroll;
+      }
+
       .form-control:focus {
         border-color: var(--bs-btn-border-color);
         box-shadow: none;
@@ -98,11 +122,16 @@
       <input type="text" id="searchInput" class="form-control" placeholder="Graph System Name" aria-describedby="searchButton" />
       <button id="searchButton" class="btn btn-outline-secondary" type="button">Search</button>
     </div>
+    <div id="search-list">
+      <div id="search-list-title">EXACT MATCHES</div>
+      <div id="search-list-content"></div>
+    </div>
     <div id="live-alert"></div>
     <div id="node-detail"></div>
     <div id="network"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/fuzzy@0.1.3/lib/fuzzy.js"></script>
     <script src="https://unpkg.com/@antv/g6@5/dist/g6.min.js"></script>
 
     <script type="module">
@@ -891,6 +920,14 @@
         return levelMap;
       };
 
+      const toggleListVisibility = (isShow) => {
+        document.getElementById('search-list').style.display = isShow ? 'block' : 'none';
+      };
+
+      const clearSearchInput = () => {
+        document.getElementById('searchInput').value = '';
+      };
+
       const removeElement = (element) => {
         while (element.firstChild) {
           element.removeChild(element.firstChild);
@@ -915,6 +952,7 @@
 
         onNodeClick = async (event) => {
           await this.clearState();
+          toggleListVisibility(false);
 
           const { direction = 'out', onlyNeighbors } = event;
           const nodeId = event.target.id;
@@ -956,6 +994,8 @@
 
         onCanvasClick = async (event) => {
           await this.clearState();
+          toggleListVisibility(false);
+          clearSearchInput();
         };
 
         bindEvents() {
@@ -1036,6 +1076,11 @@
           const { graph } = this.context;
           removeElement(this.liveAlert);
 
+          const filtered = fuzzy.filter(this.searchInput.value, nodes, { pre: '<b style="color: #1783FF;">', post: '</b>', extract: (el) => el.id });
+
+          document.getElementById('search-list-content').innerHTML = filtered.map((el) => `<div class="mb-1">${el.string}</div>`).join('');
+          toggleListVisibility(true);
+
           if (event.keyCode === 13) {
             event.preventDefault();
             this.searchButton.click();
@@ -1049,16 +1094,14 @@
           const searchValue = this.searchInput.value;
           if (!searchValue) return;
 
-          const target =
-            nodes.find((node) => node.id.toUpperCase() === searchValue.toUpperCase()) || nodes.find((node) => new RegExp(`^${searchValue}`, 'i').test(node.id)) || nodes.find((node) => new RegExp(searchValue, 'i').test(node.id));
-
-          if (target) {
-            graph.emit('node:click', { target, targetType: 'node', direction: 'out' });
-            await graph.fitView();
-          } else {
+          const filtered = fuzzy.filter(searchValue, nodes, { extract: (el) => el.id });
+          if (!filtered.length) {
             this.appendAlert('No results found for "' + searchValue + '"', 'warning');
             graph.emit('canvas:click', { targetType: 'canvas' });
           }
+
+          graph.emit('node:click', { target: graph.getNodeData(filtered[0].string), targetType: 'node', direction: 'out' });
+          await graph.fitView();
         };
 
         bindEvents() {
